fix image height on mobile

--- a/src/components/Products/ProductItem/ProductItem.scss
+++ b/src/components/Products/ProductItem/ProductItem.scss
@@ -18,7 +18,7 @@
     position: relative;
     display: block;
     width: 40%;
-    height: 250px;
+    height: 210px;
     margin: 0 auto;
 
     img {
@@ -33,6 +33,7 @@
 
     .image {
       width: 80%;
+      height: 250px;
     }
   }
 }
